--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/router": "^5.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-search-filter": "^0.3.1",
     "rxjs": "^5.4.2",
     "typescript": "^2.5.3",
     "zone.js": "^0.8.14"
